k8s/auth-deploy+svc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-auth
  template:
    metadata:
      labels:
        app: backend-auth
    spec:
      containers:
      - name: backend-auth
        image: bacon21/auth:latest
        ports:
          - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: backend-auth
  ports:
    - port: 3001
      targetPort: 3001
