k8s/discounts-deploy+svc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discounts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-discounts
  template:
    metadata:
      labels:
        app: backend-discounts
    spec:
      containers:
      - name: backend-discounts
        image: bacon21/discounts:latest
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: discounts-service
spec:
  selector:
    app: backend-discounts
  ports:
    - port: 3002
      targetPort: 3002
