k8s/items-deploy+svc.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-items
  template:
    metadata:
      labels:
        app: backend-items
    spec:
      containers:
      - name: backend-items
        image: bacon21/items:latest
        ports:
          - containerPort: 3003
         
---
apiVersion: v1
kind: Service
metadata:
  name: items-service
spec:
  selector:
    app: backend-items
  ports:
    - port: 3003
      targetPort: 3003
