k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restauranty-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/discounts(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: discounts-service
                port:
                  number: 3002
          - path: /api/items(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: items-service
                port:
                  number: 3003
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-service
                port:
                  number: 3000
